Fix light mode background improving readability

--- a/frontend/src/app/styles/colors.scss
+++ b/frontend/src/app/styles/colors.scss
@@ -9,8 +9,8 @@
   // Background color
   --left-bottom-rectangle: #7e5c47;
   --left-top-rectangle: #765846;
-  --middle-bottom-circle: #635350;
-  --right-top-circle: #554b49;
+  --middle-bottom-circle: #837977;
+  --right-top-circle: #948a88;
 
   // Shadow color
   --shadow-color: rgba(255, 255, 255, 0.25);
@@ -23,6 +23,12 @@
   --tile-color: rgba(42, 42, 42, 0.8);
   --input-field-color: rgba(0, 0, 0, 0.25);
   --input-border-color: rgba(255, 255, 255, 0.25);
+
+  // Background color
+  --left-bottom-rectangle: #7e5c47;
+  --left-top-rectangle: #765846;
+  --middle-bottom-circle: #726967;
+  --right-top-circle: #6b615f;
 
   --shadow-color: rgba(0, 0, 0, 0.25);
 }
